[tool.poetry]
name = "robot-poc"
version = "0.1.0"
description = ""
authors = ["Ville Salmela <villesalmela@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Flask = "^3.0.2"

[tool.poetry.group.dev.dependencies]
robotframework = "^7.0"
robotframework-seleniumlibrary = "^6.2.0"
pylint = "^3.0.3"
robotframework-databaselibrary = "^1.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
